--- a/projects.html
+++ b/projects.html
@@ -105,8 +105,8 @@
           <div class="navbar-inner">
             <div class="container">
               <ul class="nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="projects.html">Projects</a></li>
+                <li><a href="#">Home</a></li>
+                <li class="active"><a href="projects.html">Projects</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Downloads</a></li>
                 <li><a href="#">About</a></li>
