--- a/projects.html
+++ b/projects.html
@@ -109,7 +109,7 @@
                 <li class="active"><a href="projects.html">Projects</a></li>
                 <li><a href="#">Services</a></li>
                 <li><a href="#">Downloads</a></li>
-                <li><a href="#">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#">Contact</a></li>
               </ul>
             </div>
