--- a/about.html
+++ b/about.html
@@ -107,10 +107,8 @@
               <ul class="nav">
                 <li><a href="#">Home</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Downloads</a></li>
                 <li class="active"><a href="about.html">About</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="contact.html">Contact</a></li>
               </ul>
             </div>
           </div>
