--- a/contact.html
+++ b/contact.html
@@ -293,6 +293,7 @@
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
                 <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="resume.pdf">Resume</a></li>
                 <li class="active"><a href="contact.html">Contact</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               </ul>
