added possible new design

--- a/index.html
+++ b/index.html
@@ -294,6 +294,7 @@
                 <li><a href="portfolio.html">Portfolio</a></li>
                 <li><a href="resume.pdf">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
+                <li><a href= "sample_index.html">Sample Index</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               </ul>
             </div><!--/.nav-collapse -->
