--- a/sample_index.html
+++ b/sample_index.html
@@ -4,8 +4,9 @@
         <meta charset="utf-8">
         <title>Graham Starr</title>
         <meta name="description" content="Science and Technology in International Affairs. Innovation Design."/>
-        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
+        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:300,500" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css">
+        <style type="text/css"></style>
     </head>
     <body>
         <div id="page">
