--- a/sample_index.html
+++ b/sample_index.html
@@ -22,3 +22,9 @@
         </div>
     </body>
 </html>
+<html>
+<footer>
+	<p>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.</p>
+    <p>More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a></p>
+</footer>
+</html>
