--- a/sample_index.html
+++ b/sample_index.html
@@ -26,8 +26,8 @@
 <footer>
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
-    <p>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.   
-    More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.   </p>
+    <p><br><br><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.   </p>
+    <p>More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.   </p>
     </font>
     </span>
     </div>
