--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <footer>
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
-    <p><br><br><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.   </p>
+    <p><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.   </p>
     <p>More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.   </p>
     </font>
     </span>
