--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
 <footer>
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
-    <p><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.   </p>
-    <p>More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.   </p>
+    <div id="footer">
+    <br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.<br>
+    More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.
+    </div>
     </font>
     </span>
     </div>
