--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
-    <br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.<br>
+    <br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.
+    <br style="line-height:0px;" />
     More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.
     </div>
     </font>
