trying different line spacing

--- a/index.html
+++ b/index.html
@@ -26,9 +26,7 @@
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
-    <br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a>.
-    <br style="line-height:0px;" />
-    More by Nate can be found on his <a href="https://github.com/natetarrh">Github</a>.
+    <br><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh (<a href="https://github.com/natetarrh/">Github</a>)</a>.
     </div>
     </font>
     </span>
