--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <div id="page">
             <div id="bio">
-                Hi! I'm <a href="mailto:me@gstarr.me">Graham Starr</a>. 
+                Hi! I'm <a href="https://en.wikipedia.org/wiki/Identity_formation">Graham Starr</a>. 
                 <br>
                 <br>
                 I'm a junior at <a href="http://www.tufts.edu/">Tufts University</a>, pursuing a double major in <a href="https://en.wikipedia.org/wiki/Starfleet">International Relations and Physics</a>, with a minor in Linguistics. My focus is on <a href="https://en.wikipedia.org/wiki/Diffusion_of_innovations">innovation theory</a>, specifically its effect in the cross-section of interdisciplinary fields, and the ways in which we can apply <a href="http://link.springer.com/article/10.1007%2Fs11024-012-9191-9">science and technology to international affairs</a> most effectively. I have experience with design, web development, journalism, speechwriting, and public relations, among other things, and hope to combine them in some capacity in the future. 
