updated contact page

--- a/contact.html
+++ b/contact.html
@@ -341,3 +341,21 @@
     <script src="../assets/js/holder/holder.js"></script>
   </body>
 </html>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8">
+        <title>Graham Starr - Contact</title>
+        <meta name="description" content="Contact Graham Starr."/>
+
+    </head>
+    <body>
+        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="style.css">
+        <div id="page">
+            <div id="contact">
+                You can find me on <a href="http://twitter.com/GrahamStarr/">Twitter</a> or <a href="http://www.linkedin.com/in/grahamstarr">LinkedIn</a>. I'm also on <a href="http://www.last.fm/user/grahamstarr/">last.fm</a> and <a href="https://www.github.com/gstarr">Github</a>. Feel free to <a href="mailto:me@gstarr.me">send me an email</a> or connect on any of the social networks listed above!
+            </div>
+        </div>
+    </body>
+</html>
