updated contact page

--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Graham Starr</title>
+    <title>Graham Starr - Contact</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
@@ -343,19 +343,15 @@
 </html>
 <!DOCTYPE html>
 <html>
-    <head>
-        <meta charset="utf-8">
-        <title>Graham Starr - Contact</title>
-        <meta name="description" content="Contact Graham Starr."/>
 
-    </head>
     <body>
-        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="style.css">
+        <span style="font-family : Noto sans;color: #000000;"><font size="6">
         <div id="page">
             <div id="contact">
                 You can find me on <a href="http://twitter.com/GrahamStarr/">Twitter</a> or <a href="http://www.linkedin.com/in/grahamstarr">LinkedIn</a>. I'm also on <a href="http://www.last.fm/user/grahamstarr/">last.fm</a> and <a href="https://www.github.com/gstarr">Github</a>. Feel free to <a href="mailto:me@gstarr.me">send me an email</a> or connect on any of the social networks listed above!
             </div>
         </div>
+        </font>
+        </span>       
     </body>
 </html>
