--- a/contact.html
+++ b/contact.html
@@ -349,11 +349,13 @@
         <div id="page">
             <div id="contact">
             <div align="center"
-                You can find me on <a href="http://twitter.com/GrahamStarr/">Twitter</a> or <a href="http://www.linkedin.com/in/grahamstarr">LinkedIn</a>. 
+            <div vertalign="center">    
+                You can find me on <a href="http://twitter.com/GrahamStarr/">Twitter</a> or <a href="http://www.linkedin.com/in/grahamstarr">LinkedIn</a>.<br> 
                 <br> 
-                I'm also on <a href="http://www.last.fm/user/grahamstarr/">last.fm</a> and <a href="https://www.github.com/gstarr">Github</a>. 
+                I'm also on <a href="http://www.last.fm/user/grahamstarr/">last.fm</a> and <a href="https://www.github.com/gstarr">Github</a>. <br>
                 <br> 
                 Feel free to <a href="mailto:me@gstarr.me">send me an email</a> or connect on any of the social networks listed above!
+                </div>
                 </div>
             </div>
         </div>
