updated contact page

--- a/contact.html
+++ b/contact.html
@@ -307,6 +307,7 @@
 <br>
 
 	<span style="font-family : Noto sans;color: #000000;"><font size="6">
+    	<link rel="stylesheet" type="text/css" href="style.css">
         <div id="page">
             <div id="contact">
             	<div align="center"  
