--- a/contact.html
+++ b/contact.html
@@ -269,7 +269,7 @@
 
   <body>
 
-
+	<span style="font-family : "Helvetica Neue", Helvetica, Arial, sans-serif;"><font size="3">
 
     <!-- NAVBAR
     ================================================== -->
@@ -303,27 +303,17 @@
 
       </div> <!-- /.container -->
     </div><!-- /.navbar-wrapper -->
-<br>
-<br>
+</font>
 
 	<span style="font-family : Noto sans;color: #000000;"><font size="6">
     	<link rel="stylesheet" type="text/css" href="style.css">
         <div id="page">
             <div id="contact">
-            	<div align="center"  
-                	<br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    <br>
-                    
                     You can find me on <a href="http://twitter.com/GrahamStarr/">Twitter</a> or <a href="http://www.linkedin.com/in/grahamstarr">LinkedIn</a>.<br> 
                 	<br> 
                 	I'm also on <a href="http://www.last.fm/user/grahamstarr/">last.fm</a> and <a href="https://www.github.com/gstarr">Github</a>. <br>
                 	<br> 
                 	Feel free to <a href="mailto:me@gstarr.me">send me an email</a> or connect on any of the social networks listed above!
-                </div>
             </div>
         </div>
 	</font>
