tried to update navbar stylesheet

--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -277,6 +276,8 @@
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
       <div class="container">
 
+	<span style="font-family : Helvetica"><font size="6px>
+    	<link rel="stylesheet" type="text/css" href="bootstrap.css">
         <div class="navbar navbar-inverse">
           <div class="navbar-inner">
             <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
@@ -300,6 +301,9 @@
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
+        </font>
+        </span>
+        </font>
 
       </div> <!-- /.container -->
     </div><!-- /.navbar-wrapper -->
