--- a/contact.html
+++ b/contact.html
@@ -276,7 +276,7 @@
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
       <div class="container">
 
-	<span style="font-family : Helvetica"><font size="6px>
+	<span style="font-family : Helvetica"><font size=16px>
     	<link rel="stylesheet" type="text/css" href="bootstrap.css">
         <div class="navbar navbar-inverse">
           <div class="navbar-inner">
@@ -303,7 +303,6 @@
         </div><!-- /.navbar -->
         </font>
         </span>
-        </font>
 
       </div> <!-- /.container -->
     </div><!-- /.navbar-wrapper -->
