--- a/contact.html
+++ b/contact.html
@@ -276,8 +276,8 @@
       <!-- Wrap the .navbar in .container to center it within the absolutely positioned parent. -->
       <div class="container">
 
-	<span style="font-family : Helvetica"><font size=3px>
-    	<link rel="stylesheet" type="text/css" href="bootstrap.css">
+	<span style="font-family : Helvetica">
+	<font size=2px>
         <div class="navbar navbar-inverse">
           <div class="navbar-inner">
             <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
