maybe this works?

--- a/contact.html
+++ b/contact.html
@@ -309,6 +309,7 @@
 <br>
 <br>
 
+	<div class="containter">
 	<span style="font-family : Noto sans;color: #000000;"><font size="6">
     	<link rel="stylesheet" type="text/css" href="style.css">
         <div id="page">
@@ -321,7 +322,8 @@
             </div>
         </div>
 	</font>
-	</span>       
+	</span>
+	</div>
 
    
 
