--- a/contact.html
+++ b/contact.html
@@ -278,6 +278,7 @@
 
         <div class="navbar navbar-inverse">
           <div class="navbar-inner">
+
             <!-- Responsive Navbar Part 1: Button for triggering responsive navbar (not covered in tutorial). Include responsive CSS to utilize. -->
             <button type="button" class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
               <span class="icon-bar"></span>
@@ -287,7 +288,9 @@
             <a class="brand" href="index.html">Graham Starr</a>
             <!-- Responsive Navbar Part 2: Place all navbar contents you want collapsed withing .navbar-collapse.collapse. -->
             <div class="nav-collapse collapse">
-              <ul class="nav">
+              	<span style="font-family : Helvetica Neue">
+		<font size=2px>
+		<ul class="nav">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
@@ -296,6 +299,8 @@
                 <li class="active"><a href="contact.html">Contact</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
               </ul>
+              </font>
+              </span>
             </div><!--/.nav-collapse -->
           </div><!-- /.navbar-inner -->
         </div><!-- /.navbar -->
