--- a/projects.html
+++ b/projects.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
   <head>
@@ -305,7 +304,11 @@
     </div><!-- /.navbar-wrapper -->
 
 
-   
+   <body>
+    <div align="center">
+     COMING SOON!
+     </div>
+   </body>
 
 
   
