updated text i think

--- a/projects.html
+++ b/projects.html
@@ -306,7 +306,13 @@
 
    <body>
     <div align="center">
-     COMING SOON!
+       <div style="display: table; height: 400px; overflow: hidden;">
+          <div style="display: table-cell; vertical-align: middle;">
+            <div>
+              COMING SOON!
+            </div>
+          </div>
+        </div>
      </div>
    </body>
 
