Graham slowly reveals that he might be illiterate.

--- a/contact.html
+++ b/contact.html
@@ -311,7 +311,7 @@
 <br>
 <br>
 
-	<div class="containter">
+	<div class="container">
 	<span style="font-family : Noto sans;color: #000000;"><font size="6">
     	<link rel="stylesheet" type="text/css" href="style.css">
         <div id="page">
