--- a/projects.html
+++ b/projects.html
@@ -306,13 +306,16 @@
 
    <body>
     <div align="center">
-       <div style="display: table; height: 400px; overflow: hidden;">
-          <div style="display: table-cell; vertical-align: middle;">
-            <div>
-              COMING SOON!
-            </div>
+       <span style="font-family : Noto sans;color: #000000;"><font size="6">
+          <div style="display: table; height: 400px; overflow: hidden;">
+              <div style="display: table-cell; vertical-align: middle;">
+                <div>
+                  COMING SOON!
+                </div>
+              </div>
           </div>
-        </div>
+        </font>
+        </span>
      </div>
    </body>
 
