--- a/projects.html
+++ b/projects.html
@@ -306,7 +306,7 @@
 
    <body>
     <div align="center">
-       <span style="font-family : Noto sans;color: #000000;"><font size="6">
+       <span style="font-family : Noto Sans, "Helvetica Neue","Helvetica",sans-serif;color: #000000;"><font size="6">
           <div style="display: table; height: 400px; overflow: hidden;">
               <div style="display: table-cell; vertical-align: middle;">
                 <div>
