--- a/projects.html
+++ b/projects.html
@@ -306,7 +306,7 @@
 
    <body>
     <div align="center">
-       <span style="font-family : Helvetica;color: #000000;"><font size="6">
+       <span style="font-family : Helvetica Neue;color: #000000;"><font size="6"> <font style="STRONG">
           <div style="display: table; height: 400px; overflow: hidden;">
               <div style="display: table-cell; vertical-align: middle;">
                 <div>
@@ -314,6 +314,7 @@
                 </div>
               </div>
           </div>
+        </font>
         </font>
         </span>
      </div>
