updated organization of pages

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Graham Starr</title>
-        <meta name="description" content="Innovative Design and International Affairs."/>
+        <meta name="description" content="Innovation, Technology, and International Affairs."/>
         <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
