updated portfolio index

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,13 +8,13 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-        <div id="page">
-           <div id="content">
-             <div style="display: table-cell; vertical-align: middle;">
-             	<div align="center">
-                  COMING SOON!
-                </div>
-             </div>
+		<div align="center">
+           <div id="page">
+           		<div id="content">
+             		<div style="display: table-cell; vertical-align: middle;">
+                  		COMING SOON!
+                	</div>
+             	</div>
            </div>
         </div>
     </body>
@@ -22,7 +22,8 @@
 <html>
 <footer>
 	<div align="center">
-    <span style="font-family : Helvetica;color: #000000;"><font size="6">
+    <div style="display: table-cell; vertical-align: bottom;">
+    <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
     	<br><br> <a href="http://www.gstarr.me/">Home</a> | <a href="http://www.gstarr.me/about.html">About</a> | <a href="http://www.gstarr.me/contact.html">Contact</a> | <a href="http://www.gstarr.me/projects.html">Projects</a> | <a href="http://www.gstarr.me/portfolio">Portfolio</a>
     </div>
