updated portfolio index

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -11,7 +11,7 @@
 		<div align="center">
            <div id="page">
            		<div id="content">
-             		<div style="display: table-cell; vertical-align: middle;">
+             		<div style="display: table-cell; vertical-align:middle; text-align:center">
                   		COMING SOON!
                 	</div>
              	</div>
@@ -22,10 +22,11 @@
 <html>
 <footer>
 	<div align="center">
-    <div style="display: table-cell; vertical-align: bottom;">
+    
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
-    	<br><br> <a href="http://www.gstarr.me/">Home</a> | <a href="http://www.gstarr.me/about.html">About</a> | <a href="http://www.gstarr.me/contact.html">Contact</a> | <a href="http://www.gstarr.me/projects.html">Projects</a> | <a href="http://www.gstarr.me/portfolio">Portfolio</a>
+    <div style="display: table-cell; vertical-align: bottom; text-align:center">	
+    <br><br> <a href="http://www.gstarr.me/">Home</a> | <a href="http://www.gstarr.me/about.html">About</a> | <a href="http://www.gstarr.me/contact.html">Contact</a> | <a href="http://www.gstarr.me/projects.html">Projects</a> | <a href="http://www.gstarr.me/portfolio">Portfolio</a>
     </div>
     </font>
     </span>
