--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,8 @@
     <meta name="author" content="">
 
     <!-- Le styles -->
-    <link href="../assets/css/bootstrap.css" rel="stylesheet">
-    <link href="../assets/css/bootstrap-responsive.css" rel="stylesheet">
+        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
+        <link rel="stylesheet" type="text/css" href="style.css">
     <style>
 
     /* GLOBAL STYLES
