--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -8,7 +8,8 @@
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
     <body>
-		<div align="center">
+		<div class="container">
+        <div align="center">
            <div id="page">
            		<div id="content">
              		<div style="display: table-cell; vertical-align:middle; text-align:center">
@@ -16,6 +17,7 @@
                 	</div>
              	</div>
            </div>
+        </div>
         </div>
     </body>
 </html>
