--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 I am currently the General Manager of <a href="http://www.wmfo.org/">WMFO Medford</a>, Tufts Freeform Radio, the Public Relations Director and Webmaster for the <a href="http://www.alliescivmil.org/">Alliance Linking Leaders in Education and the Services (ALLIES)</a>, a national civil-military relations group, and the Managing Editor for <a href="http://www.twitter.com/TuftsZamboni/"><i>The Zamboni</i></a>, Tufts' Only Intentionally Funny Magazine. If I have any free time, you can find me writing, performing stand-up comedy, learning a new skill, hiking, rock climbing, or reading. 
                 <br>
                 <br>
-                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a>, check out my <a href="portfolio.html">Portfolio</a>, see what cool <a href="projects.html">Projects</a> I'm working on, or find other ways to <a href="contact.html">Contact Me</a>. Feel free to also check out my <a href="resume.pdf">resume here</a>!
+                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a>, check out my <a href="/portfolio/">Portfolio</a>, see what cool <a href="projects.html">Projects</a> I'm working on, or find other ways to <a href="contact.html">Contact Me</a>. Feel free to also check out my <a href="resume.pdf">resume here</a>!
             </div>
         </div>
     </body>
