--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -12,8 +12,8 @@
         <div align="center">
            <div id="page">
            		<div id="content">
-             		<div style="display: table-cell; vertical-align:middle; text-align:center">
-                  		COMING SOON!
+             		<div style="display: table-cell; vertical-align:"middle"; text-align:center">
+                  		<div align="center">COMING SOON!</div>
                 	</div>
              	</div>
            </div>
@@ -27,8 +27,8 @@
     
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
-    <div style="display: table-cell; vertical-align: bottom; text-align:center">	
-    <br><br> <a href="http://www.gstarr.me/">Home</a> | <a href="http://www.gstarr.me/about.html">About</a> | <a href="http://www.gstarr.me/contact.html">Contact</a> | <a href="http://www.gstarr.me/projects.html">Projects</a> | <a href="http://www.gstarr.me/portfolio">Portfolio</a>
+    <div style="display: table-cell; vertical-align: "bottom"; text-align:"center"">	
+    <br><br> <a href="http://www.gstarr.me/">Home</a> | <a href="http://www.gstarr.me/about.html">About</a> | <a href="http://www.gstarr.me/contact.html">Contact</a> | <a href="http://www.gstarr.me/projects.html">Projects</a> | <a href="http://www.gstarr.me/portfolio/">Portfolio</a>
     </div>
     </font>
     </span>
