--- a/about.html
+++ b/about.html
@@ -292,7 +292,7 @@
                 <li><a href="index.html">Home</a></li>
                 <li class="active"><a href="about.html">About</a></li>
                 <li><a href="projects.html">Projects</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
+                <li><a href="/portfolio/">Portfolio</a></li>
                 <li><a href="resume.pdf">Resume</a></li>
                 <li><a href="contact.html">Contact</a></li>
                 <!-- Read about Bootstrap dropdowns at http://twitter.github.com/bootstrap/javascript.html#dropdowns -->
