--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,9 +1,9 @@
-<!DOCTYPE html>
+
 <html>
     <head>
         <meta charset="utf-8">
-        <title>Graham Starr - Portfolio</title>
-        <meta name="description" content="Graham Starr's Portfolio."/>
+        <title>Graham Starr - Contact</title>
+        <meta name="description" content="Contact Graham Starr"/>
         <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
         <link rel="stylesheet" type="text/css" href="style.css">
     </head>
@@ -13,7 +13,18 @@
            <div id="page">
            		<div id="content">
              		<div style="display: table-cell; vertical-align:"middle"; text-align:center">
-                  		<div align="center">COMING SOON!</div>
+                  		
+	<div class="container">
+	<span style="font-family : Noto sans;color: #000000;"><font size="6">
+    	<link rel="stylesheet" type="text/css" href="style.css">
+        <div id="page">
+            <div id="contact">
+                    COMING SOON!
+            </div>
+        </div>
+	</font>
+	</span>
+	</div>
                 	</div>
              	</div>
            </div>
@@ -35,3 +46,9 @@
     </div>
 </footer>
 </html>
+
+
+   
+
+
+ 
