updated index and email and added some files

--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
                 	<br> 
                 	I'm also on <a href="http://www.last.fm/user/grahamstarr/">last.fm</a> and <a href="https://www.github.com/gstarr">Github</a>. <br>
                 	<br> 
-                	Feel free to <a href="mailto:me@gstarr.me">send me an email</a> or connect on any of the social networks listed above!
+                	Feel free to <a href="mailto:hello@gstarr.me">send me an email</a> or connect on any of the social networks listed above!
             </div>
         </div>
 	</font>
