--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
                 Hi! I'm <a href="http://www.linkedin.com/in/grahamstarr/">Graham Starr</a>. 
                 <br>
                 <br>
-                I'm a junior at <a href="http://www.tufts.edu/">Tufts University</a>, pursuing a double major in <a href="http://ase.tufts.edu/ir/">International Relations</a> and <a href="https://wikis.uit.tufts.edu/confluence/display/physics/Home">Physics</a>, with a minor in <a href="http://ase.tufts.edu/philosophy/undergraduate/minor.asp">Linguistics</a>. My focus is on <a href="https://en.wikipedia.org/wiki/Diffusion_of_innovations">innovation theory</a>, specifically its effect in the cross-section of interdisciplinary fields, and the ways in which we can apply <a href="http://link.springer.com/article/10.1007%2Fs11024-012-9191-9">science and technology to international affairs</a> most effectively. I have experience with design, journalism, public relations, speechwriting, policy writing, and <a href="https://en.wikipedia.org/wiki/Growth_Hacking">growth hacking</a>, among other things, and hope to combine them in some capacity in the future. 
+                I'm a junior at <a href="http://www.tufts.edu/">Tufts University</a>, pursuing a double major in <a href="http://ase.tufts.edu/ir/">International Relations</a> and <a href="https://wikis.uit.tufts.edu/confluence/display/physics/Home">Physics</a>, with a minor in <a href="http://ase.tufts.edu/philosophy/undergraduate/minor.asp">Linguistics</a>. My focus is on <a href="https://en.wikipedia.org/wiki/Diffusion_of_innovations">innovation theory</a>, specifically its effect in the cross-section of interdisciplinary fields, and the ways in which we can apply <a href="http://link.springer.com/article/10.1007%2Fs11024-012-9191-9">science and technology to international affairs</a> most effectively. I have experience with design, journalism, public relations, policy writing, and <a href="https://en.wikipedia.org/wiki/Growth_Hacking">growth hacking</a>, among other things, and hope to combine them in some capacity in the future. 
                 <br>
                 <br>
-                I am currently the General Manager of <a href="http://www.wmfo.org/">WMFO Medford</a>, Tufts Freeform Radio, the National Public Relations Director and Webmaster for the <a href="http://www.alliescivmil.org/">Alliance Linking Leaders in Education and the Services (ALLIES)</a>, a national civil-military relations group, and the Managing Editor for <a href="http://www.twitter.com/TuftsZamboni/"><i>The Zamboni</i></a>, Tufts' Only Intentionally Funny Magazine. If I have any free time, you can find me writing, performing stand-up comedy, learning a new skill, hiking, rock climbing, or reading. 
+                I am currently the General Manager of <a href="http://www.wmfo.org/">WMFO Medford</a>, Tufts Freeform Radio, the National Public Relations Director and Webmaster for the <a href="http://www.alliescivmil.org/">Alliance Linking Leaders in Education and the Services (ALLIES)</a>, a national civil-military relations group, and the Managing Editor for <a href="http://www.twitter.com/TuftsZamboni/"><i>The Zamboni</i></a>, Tufts' Only Intentionally Funny Magazine. If I have any free time, you can find me writing, learning a new skill, hiking, rock climbing, or reading. 
                 <br>
                 <br>
-                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a>, check out my <a href="/portfolio/">Portfolio</a>, see what cool <a href="projects.html">Projects</a> I'm working on, or find other ways to <a href="contact.html">Contact Me</a>. Feel free to also check out my <a href="resume.pdf">resume here</a>!
+                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a>, check out my <a href="/portfolio/">Portfolio</a>, see what cool <a href="projects.html">Projects</a> I'm working on, or find other ways to <a href="contact.html">Contact Me</a>. Feel free to also check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
             </div>
         </div>
     </body>
@@ -29,7 +29,7 @@
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
-    <br><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh (<a href="https://github.com/natetarrh/">Github</a>)</a>.
+    <br><br>Design inspired by <a href="http://www.natetarrh.com/">Nate Tarrh</a> (<a href="https://github.com/natetarrh/">Github</a>).
     </div>
     </font>
     </span>
