--- a/index.html
+++ b/index.html
@@ -16,13 +16,10 @@
                 I'm a junior at <a href="http://www.tufts.edu/">Tufts University</a>, pursuing a double major in <a href="http://ase.tufts.edu/ir/">International Relations</a> and <a href="https://wikis.uit.tufts.edu/confluence/display/physics/Home">Physics</a>, with a minor in <a href="http://ase.tufts.edu/philosophy/undergraduate/minor.asp">Linguistics</a>. My focus is on <a href="https://en.wikipedia.org/wiki/Diffusion_of_innovations">innovation theory</a>, specifically its effect in the cross-section of interdisciplinary fields, and the ways in which we can apply <a href="http://link.springer.com/article/10.1007%2Fs11024-012-9191-9">science and technology to international affairs</a> most effectively. I have experience with design, journalism, marketing, policy writing, and <a href="https://en.wikipedia.org/wiki/Growth_Hacking">growth hacking</a>, among other things, and hope to combine them in some capacity in the future. 
                 <br>
                 <br>
-                I'm currently the Editor-in-Chief for <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's "Only Intentionally Funny Magazine," where I also run Art Direction and web presence. I spent the past year as Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">re-designing the magazine's layout and print organization</a>.
-                <br>
-                <br>
-          	If I have any free time, you can find me writing, designing, learning a new skill, rock climbing, or reading. 
+                I'm currently the Editor-in-Chief for <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's "Only Intentionally Funny Magazine," where I also run Art Direction and web presence. I spent the past year as Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">re-designing the magazine's layout and print organization</a>. If I have any free time, you can find me writing, designing, learning a new skill, rock climbing, or reading. 
           	<br>
           	<br>
-                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a>, check out my <a href="/portfolio/">Portfolio</a>, see what cool <a href="projects.html">Projects</a> I'm working on, or find other ways to <a href="contact.html">Contact Me</a>. Feel free to also check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
+                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a> or on <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>. Feel free to check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
             </div>
         </div>
     </body>
