--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 I'm currently the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, a student-run humor and satire magazine founded in 1989. I was previously Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>, and ran Art Direction and web presence. If I have any free time, you can find me writing, designing, learning a new skill, rock climbing, or reading. 
           	<br>
           	<br>
-                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a> or on <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>. Feel free to check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
+                You can find me on Twitter <a href="http://twitter.com/GrahamStarr">@GrahamStarr</a> or on <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>. See what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. And feel free to check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
             </div>
         </div>
     </body>
