--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,54 +1,1 @@
-
-<html>
-    <head>
-        <meta charset="utf-8">
-        <title>Graham Starr - Contact</title>
-        <meta name="description" content="Contact Graham Starr"/>
-        <link href="http://fonts.googleapis.com/css?family=Noto+Sans:100,400" rel="stylesheet" type="text/css">
-        <link rel="stylesheet" type="text/css" href="style.css">
-    </head>
-    <body>
-		<div class="container">
-        <div align="center">
-           <div id="page">
-           		<div id="content">
-             		<div style="display: table-cell; vertical-align:"middle"; text-align:center">
-                  		
-	<div class="container">
-	<span style="font-family : Noto sans;color: #000000;"><font size="6">
-    	<link rel="stylesheet" type="text/css" href="style.css">
-        <div id="page">
-            <div id="contact">
-                    COMING SOON!
-            </div>
-        </div>
-	</font>
-	</span>
-	</div>
-                	</div>
-             	</div>
-           </div>
-        </div>
-        </div>
-    </body>
-</html>
-<html>
-<footer>
-	<div align="center">
-    
-    <span style="font-family : Helvetica;color: #000000;"><font size="3">
-    <div id="footer">
-    <div style="display: table-cell; vertical-align: "bottom"; text-align:"center"">	
-    <br><br> <a href="http://www.gstarr.me/">Home</a> | <a href="http://www.gstarr.me/about.html">About</a> | <a href="http://www.gstarr.me/contact.html">Contact</a> | <a href="http://www.gstarr.me/projects.html">Projects</a> | <a href="http://www.gstarr.me/portfolio/">Portfolio</a>
-    </div>
-    </font>
-    </span>
-    </div>
-</footer>
-</html>
-
-
-   
-
-
- 
+Redirect 301 / http://grahsta.tumblr.com/
