--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -1,1 +1,15 @@
-Redirect 301 / http://grahsta.tumblr.com/
+<!DOCTYPE HTML>
+<html lang="en-US">
+    <head>
+        <meta charset="UTF-8">
+        <meta http-equiv="refresh" content="1;url=http://grahsta.tumblr.com/">
+        <script type="text/javascript">
+            window.location.href = "http://grahsta.tumblr.com/"
+        </script>
+        <title>Portfolio</title>
+    </head>
+    <body>
+        <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
+        If you are not redirected automatically, follow the <a href='http://grahsta.tumblr.com/'>link to portfolio</a>
+    </body>
+</html>
