--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                 You can find me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. Feel free to check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
                 <br>
                 <br>
-                I also have a <a href="/portfolio/">portfolio</a>!
+                I also have a <a href="http://portfolio.gstarr.me/">portfolio</a>!
             </div>
         </div>
     </body>
