--- a/index.html
+++ b/index.html
@@ -42,8 +42,7 @@
 	<div align="right">
     <span style="font-family : Helvetica;color: #000000;"><font size="3">
     <div id="footer">
-    <br><br>Website and <a href="http://portfolio.gstarr.me/">porfolio</a> created by Graham Starr with CSS by <a href="http://www.natetarrh.com/">Nate Tarrh</a> (<a href="https://github.com/natetarrh/">Github</a>).
-    Hosted on <a href="http://github.com/gstarr/">Github</a>.
+    <br><br>Website and <a href="http://portfolio.gstarr.me/">porfolio</a> created by <a href-"http://www.github.com/gstarr">Graham Starr</a> with CSS by <a href="http://www.natetarrh.com/">Nate Tarrh</a> (<a href="https://github.com/natetarrh/">Github</a>).
     </div>
     </font>
     </span>
