updated link to portfolio

--- a/portfolio/index.html
+++ b/portfolio/index.html
@@ -2,14 +2,14 @@
 <html lang="en-US">
     <head>
         <meta charset="UTF-8">
-        <meta http-equiv="refresh" content="1;url=http://grahsta.tumblr.com/">
+        <meta http-equiv="refresh" content="0;url=http://portfolio.gstarr.me/">
         <script type="text/javascript">
-            window.location.href = "http://grahsta.tumblr.com/"
+            window.location.href = "http://portfolio.gstarr.me/"
         </script>
         <title>Portfolio</title>
     </head>
     <body>
         <!-- Note: don't tell people to `click` the link, just tell them that it is a link. -->
-        If you are not redirected automatically, follow the <a href='http://grahsta.tumblr.com/'>link to portfolio</a>
+        If you are not redirected automatically, follow the <a href='http://portfolio.gstarr.me/'>link to portfolio</a>
     </body>
 </html>
