--- a/index.html
+++ b/index.html
@@ -23,16 +23,16 @@
                 Hi! I'm <a href="http://www.linkedin.com/in/grahamstarr/">Graham Starr</a>. 
                 <br>
                 <br>
-                I'm a senior at <a href="http://www.tufts.edu/">Tufts University</a>, pursuing a double major in <a href="http://ase.tufts.edu/ir/">International Relations</a> and <a href="http://sites.tufts.edu/physics">Applied Physics</a>, with a minor in <a href="http://ase.tufts.edu/philosophy/undergraduate/minor.asp">Linguistics</a>. My interests concern <a href="https://en.wikipedia.org/wiki/Diffusion_of_innovations">innovation theory</a>, specifically its effect in the establishment of multidisciplinary fields, and the ways in which we can apply <a href="http://link.springer.com/article/10.1007%2Fs11024-012-9191-9">science and technology to international affairs</a> most effectively. I am also interested in <a href="https://en.wikipedia.org/wiki/Critical_theory">critical theory</a>, <a href="https://en.wikipedia.org/wiki/Literary_criticism">literary criticism</a>, technology in development and innovation, and network theory. I have experience with design, journalism, marketing, cyber security, web development, operational strategy, and data science, among other things, and hope to combine all of these things in some capacity in the future. 
+                I do many things with two things: numbers and words. I'm a writer, designer, editor, data analyst, and researcher who occasionally builds things with computers. I'm usually employed to "analyze" things - like international conflicts or market trends or informaiton security vulnerabilities or prose construction. I write a lot of articles that I forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
+                <br>
+                <br>
+                I report meta-commentaries on the zeitgeist, and tend to be concerned with <a href="https://en.wikipedia.org/wiki/Diffusion_of_innovations">innovation theory</a>, specifically its effect in the establishment of interdisciplinary fields, and the ways in which we can apply <a href="http://link.springer.com/article/10.1007%2Fs11024-012-9191-9">science and technology to international affairs</a> most effectively. I am also interested in <a href="https://en.wikipedia.org/wiki/Literary_criticism">literary criticism</a>, technology in development and innovation, and network theory. 
                 <br>
                 <br>
                 I'm currently the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts' oldest student-run humor and satire magazine. I was previously Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>, and ran Art Direction and <a href="http://www.tuftszamboni.com/">web presence</a>. If I have any free time, you can find me <a href="http://www.medium.com/@GrahamStarr">writing</a>, <a href="http://www.behance.net/grahamstarr">designing</a>, learning a new skill, <a href="http://gstarr.github.io/">making lists</a>, rock climbing, or reading. 
           	<br>
           	<br>
                 Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out my <a href="resume.pdf">resume here</a> or <a href="mailto:hello@gstarr.me">send me an email</a>!
-                <br>
-                <br>
-                I also have a <a href="http://portfolio.gstarr.me/">portfolio</a>!
             </div>
         </div>
     </body>
