--- a/index.html
+++ b/index.html
@@ -30,24 +30,20 @@
 
 
         <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
-        <p class="view"><a href="http://gstarr.github.io/about.html">About</a></p>
-        <p class="view"><a href="http://twitterr">View My GitHub Profile</a></p>
+        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
+        <p class="view"><a href="http://twitter.com/grahamstarr">Twitter</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
 
       </header>
       <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
+        <h3>Hi! I'm <a href="http://www.linkedin.com/in/grahamstarr/">Graham Starr</a>.</h3>
 
         <div id="page">
             <div id="bio">
-                Hi! I'm <a href="http://www.linkedin.com/in/grahamstarr/">Graham Starr</a>. 
-                <br>
-                <br>
                 I'm a writer, designer, editor, and data nerd. I'm usually employed to “analyze” things and I write a lot of articles that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
                 <br>
                 <br>
-               	I do serious things like data and research analysis, and have been involved in roles with titles that have words like "cyber" and "marketing" and "research" and "intern" in the title. I also do less serious things like comedy and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences</a> and musicals and sometimes I build and design things with computers. 
+               	I do serious things like data and research analysis, and have been involved in roles with titles that have words like "research" and "intern" in the title. I also do less serious things like comedy and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences</a> and musicals and sometimes I build and design things with computers. 
                 <br>
                 <br>
                 I'm currently the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's oldest student-run humor and satire magazine. I was previously Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>, and ran Art Direction and <a href="http://www.tuftszamboni.com/">web presence</a>. If I have any free time, you can find me <a href="http://www.medium.com/@GrahamStarr">writing</a>, <a href="http://www.behance.net/grahamstarr">designing</a>, learning a new skill, <a href="http://gstarr.github.io/">making lists</a>, rock climbing, or reading. 
