updated index (again)

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
       </header>
       <section>
-        <h3>Hi! I'm <a href="http://www.linkedin.com/in/grahamstarr/">Graham Starr</a>.</h3>
+        <h3>Hi! I'm Graham Starr.</h3>
 
         <div id="page">
             <div id="bio">
@@ -52,8 +52,6 @@
                 Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out my <a href="resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham!">send me an email</a>!
             </div>
         </div>
-
-<p>Having trouble with Pages? Check out the documentation at <a href="https://help.github.com/pages">https://help.github.com/pages</a> or contact <a href="mailto:support@github.com">support@github.com</a> and we’ll help you sort it out.</p>
       </section>
       <footer>
         <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
