--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
         <p></p>
 
 
-        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
-        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
-        <p class="view"><a href="http://twitter.com/grahamstarr">Twitter</a></p>
-        <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
+        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a>
+        <a href="http://blog.gstarr.me/">Blog</a>
+        <a href="http://twitter.com/grahamstarr">Twitter</a></p>
+        <a href="https://github.com/gstarr">View My GitHub Profile</a></p>
 
       </header>
       <section>
-        <h3>Hi! I'm Graham Starr.</h3>
+        <h3>Hi!</h3>
 
         <div id="page">
             <div id="bio">
