updated index again again

--- a/index.html
+++ b/index.html
@@ -29,17 +29,14 @@
         <p></p>
 
 
-        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a>
-        <a href="http://blog.gstarr.me/">Blog</a>
-        <a href="http://twitter.com/grahamstarr">Twitter</a></p>
-        <a href="https://github.com/gstarr">View My GitHub Profile</a></p>
+        <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
+        <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
+        <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
 
       </header>
       <section>
         <h3>Hi!</h3>
-
-        <div id="page">
-            <div id="bio">
+        <p>
                 I'm a writer, designer, editor, and data nerd. I'm usually employed to “analyze” things and I write a lot of articles that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
                 <br>
                 <br>
@@ -50,6 +47,7 @@
           	<br>
           	<br>
                 Feel free to connect with me on <a href="http://twitter.com/GrahamStarr">Twitter</a> or <a href="https://www.linkedin.com/in/grahamstarr">LinkedIn</a>, or see what I'm listening to on <a href="http://www.last.fm/user/grahamstarr">Last.fm</a>. If you want, you can check out my <a href="resume.pdf">resume here</a> or <a href="mailto:&#104;&#101;&#108;&#108;&#111;&#064;&#103;&#115;&#116;&#097;&#114;&#114;&#046;&#109;&#101;?subject=Hi%20Graham!">send me an email</a>!
+            </p>
             </div>
         </div>
       </section>
