--- a/index.html
+++ b/index.html
@@ -32,16 +32,16 @@
         <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
         <p class="view"><a href="http://blog.gstarr.me/">Blog</a></p>
         <p class="view"><a href="https://github.com/gstarr">View My GitHub Profile</a></p>
-        <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a></p>
+        <p class="view"><a href="http://beyonce.horse/">beyonce.horse</a><small>(a real domain that I own)</small></p>
 
       </header>
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm a writer, designer, editor, and data nerd. I'm usually employed to “analyze” things and I write a lot of articles that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
+                I'm a writer, designer, editor, and data nerd. People sometimes pay me to “analyze” things and I write a lot of articles that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>.
                 <br>
                 <br>
-               	I do serious things like data analysis, and have been involved in roles with titles that have words like "research" and "intern" in the title. I also do less serious things like comedy and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences</a> and musicals and sometimes I build and design things with computers. 
+               	I enjoy doing "serious" things data analysis, and have been involved in roles with titles that have words like "research" and "intern" in the title. I also do less serious things like comedy, and I write long-form articles and screenplays and <a href="http://gstarr.github.io/">run-on sentences where everything is in "quotes"</a> and musicals and sometimes I build and design things with computers. 
                 <br>
                 <br>
                 I'm currently the Editor-in-Chief of <a href="http://en.wikipedia.org/wiki/The_Zamboni_(magazine)"><i>The Zamboni</i></a>, Tufts University's oldest student-run humor and satire magazine. I was previously Managing Editor, <a href="http://dropr.com/gstarr/57501/humor_magazine_redesign/~?p=389627">where I redesigned the magazine's layout and print organization</a>, and ran Art Direction and <a href="http://www.tuftszamboni.com/">web presence</a>. If I have any free time, you can find me <a href="http://www.medium.com/@GrahamStarr">writing</a>, <a href="http://www.behance.net/grahamstarr">designing</a>, learning a new skill, <a href="http://gstarr.github.io/">making lists</a>, rock climbing, or reading. 
@@ -53,7 +53,7 @@
         </div>
       </section>
       <footer>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
+        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a>; mobile css by <a href=http://tarrh.me/>Nate Tarrh</a></small></p>
       </footer>
     </div>
     <script src="javascripts/scale.fix.js"></script>
