--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@
   <body>
     <div class="wrapper">
       <header>
-        <h1>Graham Starr</h1>
-        <p></p>
+        <a href="http://gstarr.github.io/">
+          <img src="logo.png" style="width:200px;height:100px;border:0">
+        </a>
+        <p>A personal website</p>
 
 
         <p class="view"><a href="http://portfolio.gstarr.me/">Portfolio</a></p>
