--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <section>
         <h3>Hi!</h3>
         <p>
-                I'm a writer, designer, editor, and data nerd. People sometimes pay me to “analyze” things and I make a lot of kind of cool things that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>. I'm interested in technology-driven applications to innovative and comprehensive storytelling, and also comedy. 
+                I'm a writer, designer, humorist, and data nerd. People sometimes pay me to “analyze” things and I make a lot of kind of cool things that I always forget to add to my <a href="http://portfolio.gstarr.me/">portfolio</a>. I'm interested in technology-driven applications to innovative and comprehensive storytelling, and also comedy. 
                 <br>
                 <br>
                	I'm currently a <a href="http://www.csmonitor.com/About/People/Graham-Starr">Dow Jones News Fund Digital Media Intern</a> with the <a href="http://www.csmonitor.com/">Christian Science Monitor</a> in Boston, where I cover technology for the Innovations section. With <a href="https://www.newsfund.org/">Dow Jones</a>, I worked on a week-long multimedia project with other student journalists. In four days, the 14 of us created nine infographics, five podcasts, two videos, and four longform stories, wrapped into one <a href="http://djnf.atavist.com/">"Phantom in Phoenix"</a> multimedia project 
